Removed tested files and worked with css and display

--- a/css/login.css
+++ b/css/login.css
@@ -1,7 +1,7 @@
 body{
     margin:0;
     padding:0;
-    background-color:powderblue;
+    background: linear-gradient(to right, #cfe2f3, #a4c7e3);
 }
 form{
     width:30%;
